Implemented clean option which cleans subdomains' IP address. Changed buttons' name. Reformatted source code. Sorted MessageBundle files.

--- a/app/src/main/resources/MessageBundle.properties
+++ b/app/src/main/resources/MessageBundle.properties
@@ -1,61 +1,67 @@
+0.is.not.in={0} is not in {1}
+add.a.subdomain=add a subdomain
+are.you.sure.you.want.to.delete.0.subdomain=are you sure you want to delete {0} subdomain
+are.you.sure.you.want.to.delete.all.Duck.DNS.subdomains=are you sure you want to delete all {0} subdomains
+are.you.sure.you.want.to.delete.this.Duck.DNS.subdomain.object=are you sure you want to delete this {0} subdomain object
+cancel.and.exit=cancel and exit
+cleaning.subdomain.s.IP.addresses=cleaning subdomains' IP addresses
+clean.subdomain.s.IP.addresses=clean subdomains' IP addresses
+confirmation=confirmation
+create=create
+delete.all.subdomains=delete all subdomains
+delete.a.subdomain=delete a subdomain
+delete=delete
+delete.subdomain.by.name=delete subdomain by it's name
+delete.subdomain.by.position=delete subdomain by it's position
+display.this.information=display this information
 duck.dns=Duck DNS
 duck.dns.ip.address.updater=Duck DNS IP Address Updater
-subdomain.creation.menu=subdomain creation menu
-options=options
-exit=exit
-save.and.exit=save and exit
-subdomain.name=subdomain name
-token=token
 enable.IPv4=enable IPv4
 enable.IPv6=enable IPv6
+exit=exit
 exiting=exiting
-saving.and.exiting=saving and exiting
-subdomain.name.is.null=subdomain name is null
-token.is.null=token is null
-subdomain.deletion.menu=subdomain deletion menu
-list.subdomains=list subdomains
-delete.subdomain.by.position=delete subdomain by it's position
-delete.subdomain.by.name=delete subdomain by it's name
-delete.all.subdomains=delete all subdomains
-subdomain.deletion.by.position.menu=subdomain deletion by position menu
-are.you.sure.you.want.to.delete.this.Duck.DNS.subdomain.object=are you sure you want to delete this {0} subdomain object
-y.yes=y - Yes
-n.no=n - No
-y=y
-n=n
-subdomain.deletion.by.name=subdomain deletion by name
-subdomain.delete.all.menu=subdomain delete all menu
-are.you.sure.you.want.to.delete.all.Duck.DNS.subdomains=are you sure you want to delete all {0} subdomains
-subdomain.0.not.founded=subdomain {0} not founded
-would.you.like.to.search.again=would you like to search again
-subdomains=subdomains
-subdomain.menu=subdomain menu
-add.a.subdomain=add a subdomain
-retrieve.a.subdomain=retrieve a subdomain
-update.a.subdomain=update a subdomain
-delete.a.subdomain=delete a subdomain
-subdomain.update.menu=subdomain update menu
-update.subdomain.by.position=update subdomain by it's position
-update.subdomain.by.name=update subdomain by it's name
-cancel.and.exit=cancel and exit
-subdomain.update.by.position.menu=subdomain update by position menu
-help.menu=help menu
 getting.help=getting help
+graphical.user.interface.is.not.supported.on.this.machine=graphical user interface is not supported on this machine
+help.menu=help menu
+IPv6.address.has.not.been.found.on.this.machine=IPv6 address has not been found on this machine
+list.subdomains=list subdomains
+main.menu=main menu
+n=n
+n.no=n - No
+object.already.exists=object already exists
 opening.console.menu=opening console menu
 opening.graphical.user.interface.menu=opening graphical user interface menu
-running.Duck.DNS.IP.Address.Updater.just.one.time=running {0} just one time
-running.Duck.DNS.IP.Address.Updater.in.infinite.loop=running {0} in infinite loop
-main.menu=main menu
-0.is.not.in={0} is not in {1}
-graphical.user.interface.is.not.supported.on.this.machine=graphical user interface is not supported on this machine
-IPv6.address.has.not.been.found.on.this.machine=IPv6 address has not been found on this machine
-object.already.exists=object already exists
-are.you.sure.you.want.to.delete.0.subdomain=are you sure you want to delete {0} subdomain
-delete=delete
-update=update
+options=options
+retrieve.a.subdomain=retrieve a subdomain
 retrieve=retrieve
-create=create
+run.with.graphical.user.interface=run with graphical user interface
+run.without.graphical.user.interface=run without graphical user interface
+save.and.exit=save and exit
+saving.and.exiting=saving and exiting
+subdomain.0.not.founded=subdomain {0} not founded
+subdomain.creation.menu=subdomain creation menu
+subdomain.delete.all.menu=subdomain delete all menu
+subdomain.deletion.by.name=subdomain deletion by name
+subdomain.deletion.by.position.menu=subdomain deletion by position menu
+subdomain.deletion.menu=subdomain deletion menu
+subdomain.menu=subdomain menu
+subdomain.name.is.null=subdomain name is null
+subdomain.name=subdomain name
+subdomains=subdomains
+subdomain.update.by.position.menu=subdomain update by position menu
+subdomain.update.menu=subdomain update menu
+token.is.null=token is null
+token=token
+update.a.subdomain=update a subdomain
+update.subdomain.by.name=update subdomain by it's name
+update.subdomain.by.position=update subdomain by it's position
+update.subdomain.s.IP.addresses.in.infinite.looping=update subdomains' IP addresses in infinite looping
+update.subdomain.s.IP.addresses.in.infinite.looping.with.a.delay.of.time.in.0.milliseconds=update subdomains' IP addresses in infinite loop with a delay of time in {0} milliseconds
+update.subdomain.s.IP.addresses=update subdomains' IP addresses
 update.subdomain=update subdomain
-confirmation=confirmation
-run.Duck.DNS.IP.Address.Updater.just.one.time=run {0} just one time
-run.Duck.DNS.IP.Address.Updater.in.infinite.loop=run {0} in infinite loop
+update=update
+updating.subdomain.s.IP.addresses.in.infinite.looping=updating subdomains' IP addresses in infinite looping
+updating.subdomain.s.IP.addresses=updating subdomains' IP addresses
+would.you.like.to.search.again=would you like to search again
+y=y
+y.yes=y - Yes
